@@ -164,6 +164,7 @@ struct gpu_thread_t *gpu_thread_create()
 {
 	struct gpu_thread_t *thread;
 	thread = calloc(1, sizeof(struct gpu_thread_t));
+	thread->write_task_list = lnlist_create();
 	thread->lds_oqa = list_create(5);
 	thread->lds_oqb = list_create(5);
 	return thread;
@@ -179,6 +180,7 @@ void gpu_thread_free(struct gpu_thread_t *thread)
 		free(list_dequeue(thread->lds_oqb));
 	list_free(thread->lds_oqa);
 	list_free(thread->lds_oqb);
+	lnlist_free(thread->write_task_list);
 
 	/* Free thread */
 	free(thread);
